2002-09-27  Cristy  <cristy@mystic.es.dupont.com>
  * Replaced underscores in commandline options with hyphens.  For backward
    compatibility, underscores will continue to be recognized.
  * Added -blue-primary, -green-primary, -red-primary, -white-point options.

2002-09-27  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  * Added BMP2 and BMP3 output formats.
  * Changed chromaticity primary.z from 1.0 to 1.0-(primary.x+primary.y) in
    the PNG and PCD codecs.

2002-09-21  Cristy  <cristy@mystic.es.dupont.com>
  * Added 'exception' parameter to the ImageMagick progress monitor API.
  * Added enumerated types for the dispose member of the Image structure.
  * Added -version option to commandline utilities.

2002-09-21  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  * The xcf decoder would sometimes create artifacts when reading RLE-encoded
    grayscale images, due to the green and blue samples not being defined.

2002-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Update to Autoconf 2.54.

2002-08-08  Cristy  <cristy@mystic.es.dupont.com>
  * Added logging capabilities to the CORE API.  This facility is useful
    for debugging.
  * AcquireImagePixels() did not always return the same pixel values
    for virtual pixels when the cache was stored on disk (very rare).
  * new -virtual-pixel command line option.
  * new PerlMagick virtual-pixel image attribute.

2002-08-07  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick 5.4.9 released.

2002-09-06  Leonard Rosenthol <leonardr@lazerware.com>
  * Fixed some bugs in the Clipboard coder
  * Added new ImageToHBITMAP function to NTFeature.c/.h in core
  * Added support for Quantum==32 to IMDisplay

2002-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Fix formatting in the *.mgk files so that they are XML conformant

2002-08-30  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  * QuantizeImage() did not always produce proper bilevel images.
