@@ -146,6 +146,10 @@ Error Methods</a></dd>
 Memory Allocation Methods</a></dd>
 
 <dd>
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/resource.html">ImageMagick
+Resource Consumption Methods</a></dd>
+
+<dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/monitor.html">ImageMagick
 Progress Monitor Methods</a></dd>
 
