@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><HTML>
 <HEAD><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<TITLE>NAME</TITLE>
+<TITLE>registry - ImageMagick Registry Methods</TITLE>
 <link rel="StyleSheet" href="../magick.css" type="text/css">
 </HEAD>
 
@@ -33,7 +33,7 @@
 <P>
 <H1><A NAME="name">
 <FONT SIZE=-1>NAME</FONT></A></H1>
-<P>registry -</P>
+<P>registry - ImageMagick Registry Methods</P>
 <P>
 <HR>
 <H1><A NAME="synopsis">
