@@ -1,3 +1,6 @@
+2002-09-28  Cristy  <cristy@mystic.es.dupont.com>
+  * Added resource consumption methods, see magick/resource.c.
+
 2002-09-27  Cristy  <cristy@mystic.es.dupont.com>
   * Replaced underscores in commandline options with hyphens.  For backward
     compatibility, underscores will continue to be recognized.
